--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@react-three/drei": "^9.121.1",
     "@react-three/fiber": "^8.17.12",
     "clsx": "^2.1.1",
+    "dotted-map": "^2.2.3",
     "framer-motion": "^11.18.0",
     "mini-svg-data-uri": "^1.4.4",
+    "motion": "^12.0.6",
     "next": "15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
